Add comprehensive README with usage guide, architecture, and configuration reference
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>